--- a/index.html
+++ b/index.html
@@ -1,43 +1,179 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Assignment 1</title>
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<title>COSC 1078 Assignment 1 (s3816170)</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+<style>
+ul {list-style-type: circle;}
+</style>
+	<body class="is-preload">
+		<!-- Header -->
+			<section id="header">
+				<header>
+					<span class="image avatar"><img src="images/Profile image.jpg" alt="Profile image" /></span>
+					<h1 id="logo"><a href="#">David Nguyen</a></h1>
+					<p class="icon solid fa-id-card">  Student ID: s3816170<br /></p>
+				</header>  
+				<nav id="nav">
+					<ul>
+						<li><a href="#one" class="active">About me</a></li>
+						<li><a href="#two">Ideal Job</a></li>
+						<li><a href="#three">Personal Profile</a></li>
+						<li><a href="#four">Project Idea</a></li>
+					</ul>
+				</nav>
+				<footer>
+					<ul class="icons">
+						<li><a href="https://www.facebook.com" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="https://github.com/dn8723" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="#one" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+					</ul>
+				</footer>
+			</section>
 
-    <style media="screen">
-      body {background-color:darkseagreen;}
-      h1 {color:red;}
-      h2 {color:blue;font-family: 'PT Sans Narrow', sans-serif;}
-    </style>
+		<!-- Wrapper -->
+			<div id="wrapper">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap" rel="stylesheet">
+				<!-- Main -->
+					<div id="main">
 
-  </head>
-  <body>
-    <h1>My Profile</h1>
+						<!-- One -->
+							<div class="image main" data-position="center">
+								<img src="images/Profile banner.jpg" alt="" />
+							</div>
+							  <section id="one">
+								<div class="container">
+									<header class="major">
+										<h2>My Profile</h2>
+									</header>
+									<h3>Personal Information</h3>
+									<ul>
+										<li>Name: David Nguyen</li>
+										<li>Email: s3816170@student.rmit.edu.au</li>
+										<li>Nationality: Australian</li>
+										<li>Ethnicity: Vietnamese</li>
+										<li>Education: Bachelor of Information Technology - RMIT University (current)</li>
+										<li>Languages spoken: English(first language), Vietamese(intermediate proficiency)</li>
+										<li>Interesting hobby: I started bike riding after many years of not riding, during the COVID-19 lockdowns. It has now developed into an off-road mountain biking hobby and a constant money pit as I'm always upgrading.</li>
+									</ul>
+									<h3>Interest in IT</h3>
+									<p>My initial interest into computers was around the time I was introduced to the game platform 'Steam', which was when I transitioned from console gaming to computer gaming. PC gamers tend to obsess over the latest and highest spec parts, and I was no different. As you can probably imagine, this was difficult as student, so instead I had to find the best "bang for buck" parts within budget. Through researching and the whole process of building my first PC, I familiarised myself with computer hardware and what each part's role was and how they interacted with one another, but at that point, it was just a hobby. It wasn't until later on when I came across the television series 'Mr Robot' that I developed a deeper interest in IT, and more specifically cyber security, and towards the end of my schooling when I started thinking about courses and careers, that I began to consider a profession in the IT field. I have yet to decide on a specific profession, but I have interests in cyber security, data science and UX/UI design. Currently, I have some basic experience in a few coding languages including Python, HTML, CSS and SQLite and web-based tools such as Figma, all of which I expect to build on as I progress through my course.</p>
+									<p>I chose to study at RMIT due to it's reputation for practical, industry-based learning as well as the abundant facilities and support that is available to students. I also had friends who were already students at RMIT who recommended it. The campus location also appealed to me for the social aspect of student life as it is right in the heart of the Melbourne CBD. </p>
+									<p>During my studies at RMIT, I expect to not only learn about and develop hard skills such as coding/programming in various languages, computer hardware/software, networking, etc but also the soft skills including communication, working in a team and problem solving. I believe this would adequately prepare me for when I begin my career in IT.</p>
+								</div>
+							</section>
 
-    <h2>Personal Information</h2>
-    <img src="Profile image.jpg" alt="Profile picture" width="200" height="200">
-    <p>This is a test. This is a test. This is a test. This is a test. This is a test. This is a test. This is a test.</p>
+						<!-- Two -->
+							<section id="two">
+								<div class="container">
+									<h3>Ideal Job</h3>
+									<h4>Senior Cyber Security Analyst</h4>
+									<a href="https://www.seek.com.au/job/56317307?type=standout#sol=57bcd88c685010e8dda1dfe1bed208355179b205" target="_blank">Click here for link to job advertisement</a>
+									<img src="images/Ideal Job Ad.png" alt="Job ad screenshot" width="700" height="1000">
+									<p>Find an advertisement showing what you believe to be your ideal job. This may require several years of experience, and hence be something that you must work towards, rather than something that you are ready for now, or will be able to fill as soon as you graduate. There are various ways to search for IT jobs, including websites like {seek.com.au}. You should include the following information.A description (in your own words) of the position, and particularly what makes this position appealing to you.</p>
+									<h4>Skills required:</h4>
+									<ul>
+										<li>A description (in your own words) of the skills, qualifications and experience required for the position.</li>
+										<li>Nationality: Australian</li>
+										<li>Ethnicity: Vietnamese</li>
+										<li>Education: Bachelor of Information Technology - RMIT University (current)</li>
+										<li>Languages spoken: English(first language), Vietamese(intermediate proficiency)</li>
+										<li>Interests: NBA, mountain biking(noob), gaming, anime</li>
+									</ul>
+									<h4>Skills I have:</h4>
+									<ul>
+										<li>A description (in your own words) of the skills, qualifications and experience you currently have.</li>
+										<li>Nationality: Australian</li>
+										<li>Ethnicity: Vietnamese</li>
+										<li>Education: Bachelor of Information Technology - RMIT University (current)</li>
+										<li>Languages spoken: English(first language), Vietamese(intermediate proficiency)</li>
+										<li>Interests: NBA, mountain biking(noob), gaming, anime</li>
+									</ul>
+									<p>A plan describing how you will obtain the skills, qualifications and experience required for the position, building on those you have now. This need not be greatly detailed, (and will probably change significantly over time anyway), but try to be as specific as you can.</p>
+									<ul class="feature-icons">
+										<li class="icon solid fa-code">Write all the code</li>
+										<li class="icon solid fa-cubes">Stack small boxes</li>
+										<li class="icon solid fa-book">Read books and stuff</li>
+										<li class="icon solid fa-coffee">Drink much coffee</li>
+										<li class="icon solid fa-bolt">Lightning bolt</li>
+										<li class="icon solid fa-users">Shadow clone technique</li>
+									</ul>
+								</div>
+							</section>
 
-    <h2>Interest in IT</h2>
-    <p>This is a test. This is a test. This is a test. This is a test. This is a test. This is a test. This is a test.</p>
+						<!-- Three -->
+							<section id="three">
+								<div class="container">
+									<h3>Personal Profile</h3>
+									<div class="features">
+										<article>
+											<div class="inner">
+												<h4>Myers-Briggs Test</h4>
+												<img src="images/MBTI.png" alt="Myers-Briggs test result" width="650" height="450">
+												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+											</div>
+										</article>
+										<article>
+											<div class="inner">
+												<h4>Learning Styles</h4><img src="images/Learning Styles.png" alt="Learning styles result" width="650" height="450">
+												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+											</div>
+										</article>
+										<article>
+											<div class="inner">
+												<h4>Creativity test</h4>
+												<img src="images/Leadership Style.png" alt="Leadership test result" width="650" height="450">
+												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+											</div>
+										</article>
+										<h4>Overview</h4>
+										<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet. Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet. Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet. Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet. Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+									</div>
+								</div>
+							</section>
 
-    <h2>Ideal Job</h2>
-    <p>This is a test. This is a test. This is a test. This is a test. This is a test. This is a test. This is a test.</p>
-    <a href="http://www.google.com.au" target="_blank"> Click for original job ad</a>
-    <img src="Job Ad.png" alt="Job ad screenshot" width="600" height="1400">
+						<!-- Four -->
+							<section id="four">
+								<div class="container">
+									<h3>Project Idea</h3>
+									<h4>Overview</h4>
+									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<h4>Motivation</h4>
+									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<h4>Description</h4>
+									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<h4>Tools and Technologies</h4>
+									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<h4>Skills requried</h4>
+									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<h4>Outcome</h4>
+									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+								</div>
+							</section>
+					</div>
 
+				<!-- Footer -->
+					<section id="footer">
+						<div class="container">
+							<ul class="copyright">
+								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							</ul>
+						</div>
+					</section>
 
-    <h2>Personal Profile</h2>
-    <p>This is a test. This is a test. This is a test. This is a test. This is a test. This is a test. This is a test.</p>
-    <img src="Profile test 1.png" alt="16 personalities" width="400" height="400">
-    <img src="Profile test 2.png" alt="Learning styles" width="400" height="400">
-    <img src="Profile test 3.jpg" alt="Big Five" width="400" height="400">
+			</div>
 
-    <h2>Project Idea</h2>
-    <p>This is a test. This is a test. This is a test. This is a test. This is a test. This is a test. This is a test.</p>
-  </body>
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
